# ApplyAutoJobs

./: .env.example  .gitignore  README.md  aplicador_gupy.py  aplicador_linkedin.py  dispatcher.py  login_gupy.py  main.py  pyproject.toml  requirements.txt  reset_db.py  vagas_encontradas.csv
.sessao_linkedin/: Local State
.sessao_linkedin/Default/: DIPS  Favicons  History  MediaDeviceSalts  Preferences  Secure Preferences  Top Sites  Web Data
.sessao_linkedin/Default/DawnGraphiteCache/: data_1  index
.sessao_linkedin/Default/DawnWebGPUCache/: data_1  index
.sessao_linkedin/Default/Extension Rules/: LOG
.sessao_linkedin/Default/Extension Scripts/: LOG
.sessao_linkedin/Default/Extension State/: LOG  LOG.old
.sessao_linkedin/Default/GCM Store/: LOG
.sessao_linkedin/Default/GPUCache/: data_0  data_1  data_2  index
.sessao_linkedin/Default/Network/: Cookies  Network Persistent State  Reporting and NEL  TransportSecurity
.sessao_linkedin/GrShaderCache/: data_0  data_1  f_000001  f_000002  f_000003  f_000004  f_000005  f_000006  f_000007  f_000008  f_000009  f_00000a  index
.sessao_linkedin/GraphiteDawnCache/: data_1  index
.sessao_linkedin/ShaderCache/: data_1  index
.sessao_linkedin/segmentation_platform/: ukm_db
jobspy_ai/: cli.py
jobspy_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jobspy_ai/bots/: gupy.py  linkedin.py
jobspy_ai/core/: ai.py  match.py
jobspy_ai/db/: database.py  migrate_csv.py  models.py
jobspy_ai/scrapers/: search.py
jobspy_ai/tui/: dashboard.py
templates/: template-2.0.docx
(+220 files in other folders)
